--- a/content/blog/disappearing-props.mdx
+++ b/content/blog/disappearing-props.mdx
@@ -1,74 +1,69 @@
 ---
-title: "The Mysterious Case of the Disappearing Props"
-description: Join us on a humorous detective journey to solve the mystery of disappearing props in a React application. Learn troubleshooting tips and best practices to prevent your props from vanishing into thin air.
-date: 2024-03-01
+title: "Getting started with git commands"
+description: Learn the basic git commands.
+date: 2024-06-21
 tags: ["code", "react", "props"]
 published: true
 ---
+Git Commands
+============
 
-# The Mysterious Case of the Disappearing Props
 
-In the quiet town of Reactville, developers live in harmony, crafting components and passing props with ease. But one day, a mystery unfolds that sends shockwaves through the community: props begin to disappear without a trace. This tale of intrigue and debugging will guide you through the dark alleys of React development to uncover the truth behind the disappearing props.
+### Getting & Creating Projects
 
-## Chapter 1: The Disappearance
+| Command | Description |
+| ------- | ----------- |
+| `git init` | Initialize a local Git repository |
+| `git clone ssh://git@github.com/[username]/[repository-name].git` | Create a local copy of a remote repository |
 
-Our story begins with a developer, much like yourself, who notices something amiss. A component that once displayed data proudly now stands empty, a shadow of its former self. The props, it seems, have vanished.
+### Basic Snapshotting
 
-```jsx
-const MysteryComponent = ({ clue }) => (
-  <div>{clue ? `Clue: ${clue}` : "No clue found."}</div>
-);
-```
+| Command | Description |
+| ------- | ----------- |
+| `git status` | Check status |
+| `git add [file-name.txt]` | Add a file to the staging area |
+| `git add -A` | Add all new and changed files to the staging area |
+| `git commit -m "[commit message]"` | Commit changes |
+| `git rm -r [file-name.txt]` | Remove a file (or folder) |
 
-## Chapter 2: Gathering Clues
+### Branching & Merging
 
-Determined to solve the mystery, our developer dons their detective hat and begins to gather clues. The first stop? The PropTypes alley, where the types of props are declared. Perhaps the culprit left a clue in the form of a type mismatch.
+| Command | Description |
+| ------- | ----------- |
+| `git branch` | List branches (the asterisk denotes the current branch) |
+| `git branch -a` | List all branches (local and remote) |
+| `git branch [branch name]` | Create a new branch |
+| `git branch -d [branch name]` | Delete a branch |
+| `git push origin --delete [branch name]` | Delete a remote branch |
+| `git checkout -b [branch name]` | Create a new branch and switch to it |
+| `git checkout -b [branch name] origin/[branch name]` | Clone a remote branch and switch to it |
+| `git branch -m [old branch name] [new branch name]` | Rename a local branch |
+| `git checkout [branch name]` | Switch to a branch |
+| `git checkout -` | Switch to the branch last checked out |
+| `git checkout -- [file-name.txt]` | Discard changes to a file |
+| `git merge [branch name]` | Merge a branch into the active branch |
+| `git merge [source branch] [target branch]` | Merge a branch into a target branch |
+| `git stash` | Stash changes in a dirty working directory |
+| `git stash clear` | Remove all stashed entries |
 
-```jsx
-import PropTypes from "prop-types";
+### Sharing & Updating Projects
 
-MysteryComponent.propTypes = {
-  clue: PropTypes.string,
-};
-```
+| Command | Description |
+| ------- | ----------- |
+| `git push origin [branch name]` | Push a branch to your remote repository |
+| `git push -u origin [branch name]` | Push changes to remote repository (and remember the branch) |
+| `git push` | Push changes to remote repository (remembered branch) |
+| `git push origin --delete [branch name]` | Delete a remote branch |
+| `git pull` | Update local repository to the newest commit |
+| `git pull origin [branch name]` | Pull changes from remote repository |
+| `git remote add origin ssh://git@github.com/[username]/[repository-name].git` | Add a remote repository |
+| `git remote set-url origin ssh://git@github.com/[username]/[repository-name].git` | Set a repository's origin branch to SSH |
 
-## Chapter 3: The Trail of Conditional Rendering
+### Inspection & Comparison
 
-The investigation leads to the shadowy path of conditional rendering, a place where props often go unnoticed. Could it be that a misplaced condition has caused the props to disappear?
-
-```jsx
-const MysteryComponent = ({ clue }) => {
-  return (
-    <>
-      {clue ? (
-        <div>Clue: {clue}</div>
-      ) : (
-        <div className="warning">Warning: Clue is missing!</div>
-      )}
-    </>
-  );
-};
-```
-
-## Chapter 4: The Redux of Red Herring
-
-In a surprising twist, our developer suspects Redux, the state manager, might be involved. But upon closer inspection, they realize it was a red herring; the props were simply not connected correctly.
-
-```jsx
-import { useSelector } from "react-redux";
-
-const MysteryComponent = () => {
-  const clue = useSelector((state) => state.mystery.clue);
-  return <div>{clue ? `Clue: ${clue}` : "No clue found."}</div>;
-};
-```
-
-## Chapter 5: The Resolution
-
-With all clues gathered, our developer uncovers the truth: the props were not disappearing; they were merely lost in the complexity of the application. By ensuring proper prop types, conditional rendering, and state management connections, the props were found safe and sound.
-
-## Epilogue: The Moral of the Story
-
-As peace returns to Reactville, our developer learns an invaluable lesson: in the world of React development, props may seem to disappear, but with careful debugging and attention to detail, they can always be found.
-
-Remember, dear developers, when faced with the mysterious disappearance of props, don your detective hat, gather your tools, and embark on a journey of discovery. The truth is out there, waiting to be uncovered.
+| Command | Description |
+| ------- | ----------- |
+| `git log` | View changes |
+| `git log --summary` | View changes (detailed) |
+| `git log --oneline` | View changes (briefly) |
+| `git diff [source branch] [target branch]` | Preview changes before merging |
