--- a/content/blog/github-snake-contribution-graph.mdx
+++ b/content/blog/github-snake-contribution-graph.mdx
@@ -26,6 +26,11 @@ Copy the gif file from my README and paste it into your newly created README. Be
 Remember to change your username where it says:
 `![Snake animation](substitute your username in the link here)`
 
+Add this link to your README file 
+
+`![snake gif](https://github.com/rhrits/rhrits/blob/output/github-contribution-grid-snake.gif)`
+
+Replace username with your own username
 
 ### Step 4:
 Navigate to the file `Create main.yml` in my README repository and copy all of its contents.
