--- a/content/blog/github-snake-contribution-graph.mdx
+++ b/content/blog/github-snake-contribution-graph.mdx
@@ -24,11 +24,12 @@ Visit my [README repository](https://github.com/rhrits/rhrits) to access the nec
 Copy the gif file from my README and paste it into your newly created README. Be sure to replace your username and update the contact information in the Contact section. Feel free to customize the Skills section to display your expertise.
 
 Remember to change your username where it says:
+
 `![Snake animation](substitute your username in the link here)`
 
 Add this link to your README file 
 
-`![snake gif](https://github.com/rhrits/rhrits/blob/output/github-contribution-grid-snake.gif)`
+```![snake gif](https://github.com/rhrits/rhrits/blob/output/github-contribution-grid-snake.gif)```
 
 Replace username with your own username
 
