--- a/content/blog/github-snake-contribution-graph.mdx
+++ b/content/blog/github-snake-contribution-graph.mdx
@@ -29,7 +29,9 @@ Remember to change your username where it says:
 
 Add this link to your README file 
 
-```![snake gif](https://github.com/rhrits/rhrits/blob/output/github-contribution-grid-snake.gif)```
+```
+![snake gif](https://github.com/rhrits/rhrits/blob/output/github-contribution-grid-snake.gif)
+```
 
 Replace username with your own username
 
