--- a/content/blog/github-snake-contribution-graph.mdx
+++ b/content/blog/github-snake-contribution-graph.mdx
@@ -6,7 +6,7 @@ published: true
 ---
 
 
-**How to add a snake game to your contribution graph on Github***
+**How to add a snake game to your contribution graph on Github**
 
 When I visit someones GitHub profile, the first thing that catches my eye is the contribution graph. While I know it does not offer much useful information, I enjoy seeing the patterns and images created by the different color shades.
 
