--- a/content/blog/github-snake-contribution-graph.mdx
+++ b/content/blog/github-snake-contribution-graph.mdx
@@ -5,7 +5,6 @@ date: 2024-09-23
 published: true
 ---
 
-
 **How to add a snake game to your contribution graph on Github**
 
 When I visit someones GitHub profile, the first thing that catches my eye is the contribution graph. While I know it does not offer much useful information, I enjoy seeing the patterns and images created by the different color shades.
@@ -27,7 +26,9 @@ Copy the gif file from my README and paste it into your newly created README. Be
 
 Remember to change your username where it says:
 
-`![Snake animation](substitute your username in the link here)`
+`
+![Snake animation](substitute your username in the link here)
+`
 
 Add this link to your README file 
 
@@ -47,9 +48,10 @@ In your README repository, go to the "Actions" tab and create a new workflow. Th
 Delete everything in the newly created `Create main.yml` or `main.yml` file and paste the code you copied from my `Create main.yml`.
 
 ### Step 7:
-Replace  username with yours in the line `github_user_name: `.
+Replace  username with yours in the line `github_user_name: `
 
 ### Step 8:
 Now, go to "View runs" and click "Run workflow." Your contribution graph will update every 12 hours, but you can adjust this in your `.yml` file if needed.
 
 Follow these steps, and soon your GitHub profile will have a fun, interactive snake game for everyone to see!
+
