--- a/content/blog/udemy-course-checkbox-automation.mdx
+++ b/content/blog/udemy-course-checkbox-automation.mdx
@@ -5,7 +5,7 @@ date: 2024-10-16
 published: true
 ---
 
-# Udemy Course Checkbox Automation Script
+# Udemy Course Checkbox Automation Script Blog
 
 This blog post provides a JavaScript automation script designed to simplify the process of expanding all course sections and checking lesson completion checkboxes on Udemy. By running this script in the browser's developer console, users can easily mark their progress across multiple lessons and expand all course content with a single command. The post includes step-by-step instructions for using the script, making it an essential tool for Udemy course takers looking to streamline their learning experience.
 
