--- a/content/blog/infinite-scroll-chrome-extension.mdx
+++ b/content/blog/infinite-scroll-chrome-extension.mdx
@@ -20,7 +20,7 @@ My Infinite Scroll Chrome extension is a tool that helps you scroll through Goog
 Installing the extension is quick and easy. Just follow these simple steps:
 
 **1. Download the Extension** 
-    -Click the "Download Extension" button on my 📌 [ website ](https://google-infinite-scroll.netlify.app/) to get the file.
+    -Click the "Download Extension" button on my 📌 [ website ](https://scroll.hrits.tech/) to get the file.
 
 **2. Unzip the File**  
     -Open the downloaded ZIP file and extract the contents to a folder on your computer.
